--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "jade": "~1.11.0",
     "knex": "^0.11.7",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0"
+    "pg": "^6.0.1",
+    "serve-favicon": "~2.3.0",
+    "jwt-simple": "^0.3.0",
+    "sha1": "^1.1.1"
   },
   "devDependencies": {
     "babel-cli": "^6.10.1",
