--- a/package.json
+++ b/package.json
@@ -15,15 +15,16 @@
     "bluebird": "^3.4.1",
     "body-parser": "~1.15.1",
     "bookshelf": "^0.10.0",
+    "cloudinary": "^1.4.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.13.4",
     "jade": "~1.11.0",
+    "jwt-simple": "^0.3.0",
     "knex": "^0.11.7",
     "morgan": "~1.7.0",
     "pg": "^6.0.1",
     "serve-favicon": "~2.3.0",
-    "jwt-simple": "^0.3.0",
     "sha1": "^1.1.1"
   },
   "devDependencies": {
