--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "cloudinary": "*",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
+    "del": "^2.2.2",
     "express": "~4.13.4",
+    "formidable": "^1.1.1",
     "jade": "~1.11.0",
     "jwt-simple": "^0.3.0",
     "knex": "^0.11.7",
